gccida/g2/warning_init
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/warning_init/src/c-typeck.c:5123:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v2 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/warning_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/warning_init/src/c-typeck.c:5124:23: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
if ( spelling_base >= spelling_0 ) 
                      ^~~~~~~~~~
                      spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/warning_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/warning_init/src/obj/c-typeck.o] Error 1
